# triangle_slapper

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
include/: color.h  config.h  fast_rand.h  genetic_algorithm.h  thread_sync.h  triangle.h
src/: color.c  color.h  config.c  fast_rand.c  genetic_algorithm.c  genetic_algorithm.h  main.c  thread_sync.c  triangle.c
